# genesis_ros

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: pytest.yaml
algorithms/ppo/: index.html
docs/: index.md  setup.md
docs/algorithms/: ppo.md
genesis_ros/: analyze_urdf.py  geneses_ros_env.py  genesis_ros.py  genesis_ros_env.py  math.py  preprocess_urdf.py  rosbag_writer.py  run.py  run_simulation.py  topic_interfaces.py  util.py
genesis_ros/ppo/: actor_policy.py  ppo_env.py  ppo_env_options.py  ppo_eval.py  ppo_train.py  ppo_train_options.py
genesis_ros/ppo/config/atlas_walking/: command_config.yaml  environment_config.yaml  reward_functions.py  train_config.yaml
genesis_ros/ppo/config/go2_walking/: command_config.yaml  entities.py  environment_config.yaml  observation_config.yaml  reward_functions.py  simulation_config.yaml  train_config.yaml
genesis_ros/ppo/config/h1_walking/: environment_config.yaml  reward_functions.py  train_config.yaml
genesis_ros/ppo/config/op3_walking/: environment_config.yaml  train_config.yaml
genesis_ros/ros2_interface/: __init__.py  messages.py
genesis_ros/ros2_interface/builtin_interfaces/: msg.py
genesis_ros/ros2_interface/rosgraph_msgs/msg/: __init__.py
genesis_ros/ros2_interface/torch_msgs/: msg.py
genesis_ros/ros2_interface/torch_msgs/msg/: __init__.py
genesis_ros/urdf/atlas/: atlas_v4_with_multisense.urdf
genesis_ros/urdf/atlas/meshes_unplugged/: convert.bat  l_uglut.mtl  mtorso.mtl  r_uleg.mtl  utorso.mtl
genesis_ros/urdf/atlas/meshes_v3/: convert.bat  r_farm.dae  r_larm.mtl
genesis_ros/urdf/atlas/multisense_sl_description/meshes/: convert.bat  head.dae  head_camera.dae  head_camera.mtl
genesis_ros/urdf/h1/: h1.urdf  h1_with_hand.urdf
genesis_ros/urdf/robotis_op3/: model.urdf
search/: search_index.json
setup/: index.html
test/: test_genesis_ros_env.py  test_ppo.py  test_ppo_env.py  test_ppo_eval.py  test_ppo_train.py  test_preprocess_urdf.py  test_ros2_interface.py
