[tool.poetry]
name = "genesis-ros"
version = "0.1.0"
description = "ROS2 bridge / related tools for genesis"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
genesis-world = "^0.2.0"
amber = {git = "https://github.com/rosbag-sharing-community/amber.git", rev = "feature/tf"}
xacrodoc = "^0.4.1"

[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
