[project]
name = "genesis-ros"
version = "0.1.0"
description = "ROS2 bridge / related tools for genesis"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amber-mcap>=0.4.3; sys_platform == 'linux'",
    "torch==2.5.0+cu124; sys_platform == 'linux'",
    "torch==2.5.0; sys_platform == 'darwin'",
    "torchaudio==2.5.0+cu124; sys_platform == 'linux'",
    "torchaudio==2.5.0; sys_platform == 'darwin'",
    "torchvision==0.20.0+cu124; sys_platform == 'linux'",
    "torchvision==0.20.0; sys_platform == 'darwin'",
    "xacrodoc>=0.4.1",
    "genesis-world>=0.2.0",
    "rsl-rl-lib>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
preprocess_urdf = "genesis_ros.preprocess_urdf:main"
simulation = "genesis_ros.run_simulation:main"

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124/torch",
    "https://download.pytorch.org/whl/cu124/torchvision",
    "https://download.pytorch.org/whl/cu124/torchaudio",
]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "black==25.1.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pre-commit>=4.2.0",
    "lark>=1.2.2",
    "pytest-cov>=6.1.1",
    "pytest-testmon>=2.1.3",
]
